--- a/app/src/components/homepage.css
+++ b/app/src/components/homepage.css
@@ -48,3 +48,9 @@
     left: 50%;
     transform: translate(-50%, -50%);
 }
+
+.sticky {
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
+}
