--- a/app/src/components/homepage.css
+++ b/app/src/components/homepage.css
@@ -1,56 +1,18 @@
-/* Container holding the image and the text */
-.container {
-    position: relative;
-    text-align: center;
-    color: white;
-    bottom: 20px;
-}
-
-/* Bottom left text */
-.bottom-left {
-    position: absolute;
-    bottom: 8px;
-    left: 16px;
-}
-
-/* Top left text */
-.top-left {
-    position: absolute;
-    top: 8px;
-    left: 16px;
-}
-
-/* Top right text */
-.top-right {
-    position: absolute;
-    top: 8px;
-    right: 16px;
-}
-
-.top-center {
-    position: absolute;
-    top: 75px;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-/* Bottom right text */
-.bottom-right {
-    position: absolute;
-    bottom: 8px;
-    right: 16px;
-}
-
-/* Centered text */
-.centered {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
 .sticky {
     position: -webkit-sticky; /* Safari */
     position: sticky;
     top: 2%;
+}
+
+.background {
+    /* The image used */
+    background-image: url("../images/homeinfo.jpg");
+
+    /* Full height */
+    height: 100%;
+
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
