--- a/frontend/src/components/homepage.css
+++ b/frontend/src/components/homepage.css
@@ -16,3 +16,15 @@
     background-repeat: no-repeat;
     background-size: 100%;
 }
+
+.searchbutton
+{
+  background-color: #000080; /* Green */
+  border: none;
+  color: white;
+  padding: 6px 12px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
