--- a/frontend/src/components/TeacherSpecificDetails.css
+++ b/frontend/src/components/TeacherSpecificDetails.css
@@ -5,11 +5,13 @@
     justify-content:flex-start;
 }
 
-.btn
-{
-    margin-top: 90%;
-}
-.btn-dark
-{
-    margin-top: 10%;
+.button-card {
+    background-color: #fff;
+    flex-grow: 1;
+    max-height: 200px;
+    height: min-content;
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
