teacherspecifc details alignment

--- a/frontend/src/components/TeacherSpecificDetails.css
+++ b/frontend/src/components/TeacherSpecificDetails.css
@@ -6,22 +6,19 @@
 }
 
 .button-card {
-    background-color: #fff;
     flex-grow: 1;
-    max-height: 200px;
+    max-width:   300px; ;
+    margin-left: 10rem;
+    margin-top: 10rem;;
     height: min-content;
-    padding: 24px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
 }
 
 .button {
-    background-color: #fff;
     flex-grow: 1;
-    max-height: 200px;
-    height: min-content;
-    padding: 24px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
