--- a/frontend/src/components/teachers/TeacherSpecificDetails.css
+++ b/frontend/src/components/teachers/TeacherSpecificDetails.css
@@ -1,4 +1,4 @@
-.card-deck
+.card-group
 {
     
     display:flex;
@@ -8,21 +8,21 @@
 
 
 
-.card-specific
+.card
 {
-    
+    margin-top: 0.01vh;
     background-color:#228660;
 }
 
-.button-card {
+.card-specific {
     background-color:#228660;
-    margin-top: 30vh;
-    margin-left: 30vh;
+    /* margin-top: 30vh;
+    margin-left: 30vh; */
     flex-grow: 1;
     max-height: 120px;
     max-width: 400px;
     height: min-content;
-    padding: 24px;
+    padding: 20px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -37,4 +37,28 @@
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+}
+
+
+
+/* .scrollabletextbox {
+    height:100px;
+    width:200px;
+    font-family: Verdana, Tahoma, Arial, Helvetica, sans-serif;
+    font-size: 82%;
+    overflow:scroll;
+} */
+
+.comment-section{
+    max-height: 25vh;
+    max-width: 90%;
+    background-color: #6e4f4f;
+    overflow-y:scroll;
+}
+.comment{
+    height: 10%;
+    padding: 2%;
+    margin: 2%;
+    background-color: #ffff;
+    color: black;
 }
