--- a/frontend/src/components/teachers/TeacherSpecificDetails.css
+++ b/frontend/src/components/teachers/TeacherSpecificDetails.css
@@ -1,15 +1,13 @@
 .card-group
 {
-    
     display:flex;
     flex-direction: row;
-    justify-content:flex-start;
+    justify-content: flex-start;
+    column-gap: 200px;
 }
 
-
-
 .card
-{
+{ 
     margin-top: 0.01vh;
     background-color:#228660;
 }
@@ -28,6 +26,21 @@
     justify-content: space-between;
 }
 
+.card-first {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: flex-start;
+}
+
+.card-second {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: right;
+    align-content: center;
+}
+
 .button {
     background-color: hsl(17, 60%, 33%); /* Green */
     border: none;
@@ -40,6 +53,7 @@
     display: inline-block;
     font-size: 12px;
 }
+
 .image
 {
     align-items: center;
