--- a/frontend/src/components/teachers/CommentsComponent.css
+++ b/frontend/src/components/teachers/CommentsComponent.css
@@ -9,7 +9,8 @@
     height: 0%;
     padding: 0%;
     margin: 0%;
-    background-color: #ffff;
+    width: 10vmin;
+    background-color: rgb(172, 76, 76);
     color: black;
 }
 
