Added BookingMessage in the email

--- a/backend/templates/email_template.html
+++ b/backend/templates/email_template.html
@@ -35,6 +35,7 @@
                 <li>Day: <strong>{{.Day}}</strong></li>
                 <li>Date: <strong>{{.Date}}</strong></li>
                 <li>Timings: <strong>{{.SlotStartTime}} - {{.SlotEndTime}}</strong></li>
+                <li>Additional Note: <strong>{{.BookingMessage}}</strong></li>
             </ul>
 
 
